Fixed mega menu, added dark mode

--- a/app/global.css
+++ b/app/global.css
@@ -7,7 +7,7 @@
     --background: #FFFFFF;
     --foreground: #09090B;
 
-    --card: #FFFFFF;
+    --card: #EFEFEF;
     --card-foreground: #09090B;
 
     --popover: #FFFFFF;
@@ -47,7 +47,7 @@
     --background: #09090B;
     --foreground: #FAFAFA;
 
-    --card: #09090B;
+    --card: #1e293b;
     --card-foreground: #FAFAFA;
 
     --popover: #09090B;
